--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,11 +1,11 @@
 # Node modules directory
-node_modules/
+/node_modules
 
 # Environment variables file
 .env
 
 # Logs
-logs/
+/logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -16,8 +16,8 @@ yarn-error.log*
 Thumbs.db
 
 # IDE-specific files
-.vscode/
-.idea/
+/.vscode
+/.idea
 
 # Production build artifacts (if applicable)
-dist/
+/dist
