--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
     "mongoose": "^8.9.5"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.3",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "supertest": "^7.0.0"
   }
 }
